force-app/main/default/objects/csvUploader_Mapping__mdt/csvUploader_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>csvUploader Mapping</label>
    <pluralLabel>csvUploader Mappings</pluralLabel>
</CustomObject>