force-app/main/default/objects/csvUploader_Mapping__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>Apex Class to call after DML operation</description>
    <inlineHelpText>Apex Class to call after DML operation</inlineHelpText>
    <label>ApexClass</label>
    <length>60</length>
    <type>Text</type>
</CustomField>