force-app/main/default/objects/csvUploader_Mapping__mdt/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <description>Apex Method to call after DML operation</description>
    <inlineHelpText>Apex Method to call after DML operation</inlineHelpText>
    <label>ApexMethod</label>
    <length>60</length>
    <type>Text</type>
</CustomField>