force-app/main/default/objects/csvUploader_Mapping__mdt/fields/DML_Type__c.field-meta.xml
<CustomField>
    <fullName>DML_Type__c</fullName>
    <label>DML Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
                <default>true</default>
                <label>Insert</label>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>