force-app/main/default/objects/csvUploader_Mapping__mdt/fields/ExternalIdFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdFieldAPI__c</fullName>
    <description>The API name of the field to use for Updating or Upserting these records</description>
    <label>External Id Field API</label>
    <length>30</length>
    <type>Text</type>
</CustomField>