force-app/main/default/objects/csvUploader_Mapping__mdt/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <description>JSON formatted Mapping from file to sf field</description>
    <label>Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>