force-app/main/default/objects/csvUploader_Mapping__mdt/fields/ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI__c</fullName>
    <label>Object API Name</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>