force-app/main/default/objects/csvUploader_Mapping__mdt/fields/Synchronous_Limit__c.field-meta.xml
<CustomField>
    <fullName>Synchronous_Limit__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Synchronous Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>