force-app/main/default/objects/csvUploader_Mapping__mdt/fields/Template_Url__c.field-meta.xml
<CustomField>
    <fullName>Template_Url__c</fullName>
    <label>Template Url</label>
    <type>TextArea</type>
</CustomField>